--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,7 @@
-# ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
 DATABASE_URL=
-SESSION_ID=
+SESSION_ID=Silva~EJQniayK#rlLS_aSq8yeOFqR4y_2ZMlbcdI1TFF1hvE6KI14tVqI
 REMOVEBG_KEY=
-PREFIX=
-MODE=
+PREFIX=.
+MODE=Public
 autoRead=
 statusview=
